# lowlatency-matching-engine

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
bench/: generator.py
benchmark/: CMakeLists.txt  README.md  run_all_benchmarks.sh
benchmark/integration/: run_integration.sh
benchmark/results/: integration_20251231_174611.txt  stress_20251231_174611.txt  unit_20251231_174611.txt
benchmark/tools/: results_analyzer.py
benchmark/unit/: benchmark_suite.cpp  stress_test.cpp
include/: Log.hpp  MatchingEngine.hpp  Protocol.hpp
src/: MatchingEngine.cpp  Protocol.cpp  main  main.cpp
tests/: engine_tests.cpp
